redirect to localhost : Bug

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <script type="text/javascript">
       setTimeout(function () {
-        window.location.href = "http://localhost:5500/clixoDetail.html";
+        window.location.href = "./clixoDetail.html";
       }, 3000);
     </script>
   </head>
