--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -19,6 +19,11 @@
 
     <title>Details</title>
     <style></style>
+    <script type="text/javascript">
+      setInterval(function () {
+        plusSlides(1);
+      }, 4000);
+    </script>
   </head>
   <body style="overflow-x: hidden">
     <link
@@ -29,19 +34,60 @@
     <div class="main">
       <div class="header">
         <span style="font-size: 40px; font-weight: 800; color: #ff3a00">Clixo</span>
-        <!-- <p>
-          <i
-            class="fa fa-bars"
-            style="font-size: 30px"
-          ></i>
-        </p> -->
       </div>
       <div class="slider-main">
-        <!-- <img
-          src="./images/one.png"
-          alt="Image 1"
-          style="width: 100%; height: 200px"
-        /> -->
+        <div class="slideshow-container">
+          <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img
+              src="images/one.png"
+              style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
+            />
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img
+              src="images/two.png"
+              style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
+            />
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img
+              src="images/one.png"
+              style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
+            />
+          </div>
+
+          <a
+            class="prev"
+            onclick="plusSlides(-1)"
+            >❮</a
+          >
+          <a
+            class="next"
+            onclick="plusSlides(1)"
+            >❯</a
+          >
+        </div>
+        <br />
+
+        <div style="text-align: center">
+          <span
+            class="dot"
+            onclick="currentSlide(1)"
+          ></span>
+          <span
+            class="dot"
+            onclick="currentSlide(2)"
+          ></span>
+          <span
+            class="dot"
+            onclick="currentSlide(3)"
+          ></span>
+        </div>
       </div>
       <div
         class="offer"
@@ -171,26 +217,35 @@
       </div>
     </div>
     <script>
-      var slideIndex = 0;
-      carousel();
+      let slideIndex = 1;
+      showSlides(slideIndex);
 
-      function carousel() {
-        var i;
-        var slides = document.getElementsByClassName("slide");
+      function plusSlides(n) {
+        showSlides((slideIndex += n));
+      }
 
-        for (i = 0; i < slides.length; i++) {
-          slides[i].classList.remove("active");
-        }
+      function currentSlide(n) {
+        showSlides((slideIndex = n));
+      }
 
-        slideIndex++;
-
-        if (slideIndex > slides.length) {
+      function showSlides(n) {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {
           slideIndex = 1;
         }
-
-        slides[slideIndex - 1].classList.add("active");
-
-        setTimeout(carousel, 2000); // Change image every 2 seconds
+        if (n < 1) {
+          slideIndex = slides.length;
+        }
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
       }
     </script>
   </body>
