--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -40,7 +40,7 @@
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
             <img
-              src="images/one.png"
+              src="images/bookOnline.png"
               style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
             />
           </div>
@@ -48,7 +48,7 @@
           <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
             <img
-              src="images/two.png"
+              src="images/doshoot.png"
               style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
             />
           </div>
@@ -56,7 +56,7 @@
           <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
             <img
-              src="images/one.png"
+              src="images/getdata.png"
               style="width: 100%; border-radius: 10px; height: 230px; max-height: 230px"
             />
           </div>
