Banner Update , fontsize adjustments, Menu Icon, Hello text and splash screen

--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -29,12 +29,17 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <div class="main">
       <div class="header">
-        <span style="font-size: 35px; font-weight: 800; color: #ff3a00">Clixo</span>
+        <span style="font-size: 35px; font-weight: 800; color: #ff3a00">Hello!</span>
         <p onclick="openNav()">
-          <i
+          <!-- <i
             class="fa fa-bars"
             style="font-size: 30px"
-          ></i>
+          ></i> -->
+          <img
+              src="images/hamburger.png"
+              alt=""
+              style="width: 40px; margin-left: -10px"
+            />
         </p>
       </div>
       <div
@@ -49,6 +54,13 @@
           ><i
             class="fa fa-times"
             aria-hidden="true"
+            style="color: white;
+            background-color: black;
+            border-radius: 100px;
+            padding-inline: 13px;
+            padding-block: 10px;
+            font-size: 30px;
+            "
           ></i
         ></a>
         <span class="menuText">Menu</span>
@@ -139,11 +151,9 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 16px; font-weight: 700; margin-bottom: 10px"
-                  >Photo Guy</span
-                >
-                <span style="margin-bottom: 5px; font-size: smaller">3 hour service</span>
-                <span style="font-size: smaller; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Photo Guy</span>
+                <span style="margin-bottom: 1px; font-size: smaller">3 hour service</span>
+                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
                   >30-50* HighQuality Raw Photos</span
                 >
                 <a
@@ -184,11 +194,9 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 16px; font-weight: 700; margin-bottom: 10px"
-                  >Video Guy</span
-                >
-                <span style="margin-bottom: 5px; font-size: smaller">3 hour service</span>
-                <span style="font-size: smaller; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Video Guy</span>
+                <span style="margin-bottom: 1px; font-size: smaller">3 hour service</span>
+                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
                   >30* HighQuality RawVideos</span
                 >
                 <a
@@ -229,11 +237,9 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 16px; font-weight: 700; margin-bottom: 10px"
-                  >Drone Guy</span
-                >
-                <span style="margin-bottom: 5px">3 hour service</span>
-                <span style="font-size: smaller; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Drone Guy</span>
+                <span style="margin-bottom: 1px; font-size: smaller"">3 hour service</span>
+                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
                   >30* Aerial HD/4K Raw Videos/Photos</span
                 >
                 <a
@@ -274,10 +280,10 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 16px; font-weight: 700; margin-bottom: 10px; max-width: 70%"
+                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px; max-width: 70%"
                   >Corporate Pack</span
                 >
-                <span style="margin-bottom: 5px; max-width: 80%; font-size: 12px"
+                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
                   >Final video deliver in 25 days</span
                 >
                 <a
