--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
       height: 100vh;
       background-color: #ff3a00;
       overflow: hidden;
+      flex-direction: column;
+      align-items: center;
     "
   >
-    <div style="font-size: 50px; font-weight: 600; color: #ff3a00">Clixo</div>
+    <span style="font-size: 80px; font-weight: bolder; color: #ff3a00">clixo</span>
+    <span style="font-size: 50px; font-weight: 300; color: #ff3a00; margin-top: -20px">App</span>
   </body>
 </html>
