Fit into 100vh screen

--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -29,17 +29,13 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <div class="main">
       <div class="header">
-        <span style="font-size: 35px; font-weight: 800; color: #ff3a00">Hello!</span>
+        <span style="font-size: 1.5em; font-weight: 800; color: #ff3a00">Hello!</span>
         <p onclick="openNav()">
-          <!-- <i
-            class="fa fa-bars"
-            style="font-size: 30px"
-          ></i> -->
           <img
-              src="images/hamburger.png"
-              alt=""
-              style="width: 40px; margin-left: -10px"
-            />
+            src="images/hamburger.png"
+            alt=""
+            style="width: 30px; margin-left: -10px"
+          />
         </p>
       </div>
       <div
@@ -54,12 +50,13 @@
           ><i
             class="fa fa-times"
             aria-hidden="true"
-            style="color: white;
-            background-color: black;
-            border-radius: 100px;
-            padding-inline: 13px;
-            padding-block: 10px;
-            font-size: 30px;
+            style="
+              color: white;
+              background-color: black;
+              border-radius: 100px;
+              padding-inline: 13px;
+              padding-block: 10px;
+              font-size: 20px;
             "
           ></i
         ></a>
@@ -113,24 +110,33 @@
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">
+            <a
+              class="swiper-slide"
+              href="https://clixoapp.com/"
+            >
               <img
                 src="images/bookOnline.png"
                 alt=""
               />
-            </div>
-            <div class="swiper-slide">
+            </a>
+            <a
+              class="swiper-slide"
+              href="https://clixoapp.com/"
+            >
               <img
                 src="images/doshoot.png"
                 alt=""
               />
-            </div>
-            <div class="swiper-slide">
+            </a>
+            <a
+              class="swiper-slide"
+              href="https://clixoapp.com/"
+            >
               <img
                 src="images/getdata.png"
                 alt=""
               />
-            </div>
+            </a>
           </div>
         </div>
       </div>
@@ -138,6 +144,11 @@
         class="offer"
         style="color: green"
       >
+        <i
+          class="fa fa-tag"
+          aria-hidden="true"
+          style="transform: rotate(90deg)"
+        ></i>
         20% off on all types of services
       </div>
       <div class="list">
@@ -151,12 +162,14 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Photo Guy</span>
-                <span style="margin-bottom: 1px; font-size: smaller">3 hour service</span>
-                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
-                  >30-50* HighQuality Raw Photos</span
+                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                  >Photo Guy</span
                 >
-                <a
+                <span style="font-size: 1.5vh">3 hour service</span>
+                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
+                  >30-50 Photos</span
+                >
+                <!-- <a
                   href="https://clixoapp.com/"
                   style="
                     margin-top: 4px;
@@ -165,13 +178,19 @@
                     font-size: 10px;
                   "
                   >View Details</a
-                >
+                > -->
               </div>
               <div class="rt-r-card">
-                <span style="color: green; font-size: 18px; font-weight: 700">₹5999</span>
-                <span style="color: rgb(150, 5, 5); font-size: 12px; text-decoration: line-through"
-                  >₹ 6999</span
-                >
+                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                  <i
+                    class="fa fa-tag"
+                    aria-hidden="true"
+                    style="color: green; transform: rotate(90deg)"
+                  >
+                  </i>
+                  <span style="font-weight: 800"> ₹5999 </span>
+                </span>
+                <span style="font-size: 12px; text-decoration: line-through">₹ 6999</span>
               </div>
             </div>
             <div class="rb-card">
@@ -194,12 +213,14 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Video Guy</span>
-                <span style="margin-bottom: 1px; font-size: smaller">3 hour service</span>
-                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
-                  >30* HighQuality RawVideos</span
+                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                  >Video Guy</span
                 >
-                <a
+                <span style="font-size: 1.5vh">3 hour service</span>
+                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
+                  >15-30 Video Clips</span
+                >
+                <!-- <a
                   href="https://clixoapp.com/"
                   style="
                     margin-top: 4px;
@@ -208,13 +229,19 @@
                     font-size: 10px;
                   "
                   >View Details</a
-                >
+                > -->
               </div>
               <div class="rt-r-card">
-                <span style="color: green; font-size: 18px; font-weight: 700">₹8999</span>
-                <span style="color: rgb(150, 5, 5); font-size: 12px; text-decoration: line-through"
-                  >₹ 9999</span
-                >
+                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                  <i
+                    class="fa fa-tag"
+                    aria-hidden="true"
+                    style="color: green; transform: rotate(90deg)"
+                  >
+                  </i>
+                  <span style="font-weight: 800"> ₹8999 </span>
+                </span>
+                <span style="font-size: 12px; text-decoration: line-through">₹ 9999</span>
               </div>
             </div>
             <div class="rb-card">
@@ -237,12 +264,14 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px">Drone Guy</span>
-                <span style="margin-bottom: 1px; font-size: smaller"">3 hour service</span>
-                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
-                  >30* Aerial HD/4K Raw Videos/Photos</span
+                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                  >Drone Guy</span
                 >
-                <a
+                <span style="font-size: 1.5vh">3 hour service</span>
+                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
+                  >15-30 Aerial Videos</span
+                >
+                <!-- <a
                   href="https://clixoapp.com/"
                   style="
                     margin-top: 4px;
@@ -251,13 +280,19 @@
                     font-size: 10px;
                   "
                   >View Details</a
-                >
+                > -->
               </div>
               <div class="rt-r-card">
-                <span style="color: green; font-size: 18px; font-weight: 700">₹11999</span>
-                <span style="color: rgb(150, 5, 5); font-size: 12px; text-decoration: line-through"
-                  >₹ 13999</span
-                >
+                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                  <i
+                    class="fa fa-tag"
+                    aria-hidden="true"
+                    style="color: green; transform: rotate(90deg)"
+                  >
+                  </i>
+                  <span style="font-weight: 800"> ₹11999 </span>
+                </span>
+                <span style="font-size: 12px; text-decoration: line-through">₹ 13999</span>
               </div>
             </div>
             <div class="rb-card">
@@ -280,11 +315,11 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 20px; font-weight: 600; margin-bottom: 4px; max-width: 70%"
+                <span style="font-size: 2.3vh; font-weight: 800; margin-bottom: 2px"
                   >Corporate Pack</span
                 >
                 <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
-                  >Final video deliver in 25 days</span
+                  >Final video deliver in 25 Days</span
                 >
                 <a
                   href="https://clixoapp.com/"
@@ -293,10 +328,16 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="color: green; font-size: 18px; font-weight: 700">₹74999</span>
-                <span style="color: rgb(150, 5, 5); font-size: 12px; text-decoration: line-through"
-                  >₹ 95999</span
-                >
+                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                  <i
+                    class="fa fa-tag"
+                    aria-hidden="true"
+                    style="color: green; transform: rotate(90deg)"
+                  >
+                  </i>
+                  <span style="font-weight: 800"> ₹74999 </span>
+                </span>
+                <span style="font-size: 12px; text-decoration: line-through">₹ 95999</span>
               </div>
             </div>
             <div class="rb-card">
@@ -310,13 +351,13 @@
       // Define a function to open the overlay
       function openNav() {
         document.getElementById("myNav").style.width = "100%";
-        document.getElementById("myNav").style.height = "100%";
+        // document.getElementById("myNav").style.height = "100%";
       }
 
       // Define a function to close the overlay
       function closeNav() {
         document.getElementById("myNav").style.width = "0%";
-        document.getElementById("myNav").style.height = "0%";
+        // document.getElementById("myNav").style.height = "0%";
       }
     </script>
 
