--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       setTimeout(function () {
         window.location.href = "./clixoDetail.html";
       }, 2000);
-      setTimeout(function () {
-        document.body.style.backgroundColor = "#ffffff";
-      }, 500);
+      // setTimeout(function () {
+      //   document.body.style.backgroundColor = "#ffffff";
+      // }, 500);
     </script>
   </head>
   <style></style>
@@ -31,7 +31,7 @@
       align-items: center;
     "
   >
-    <span style="font-size: 80px; font-weight: bolder; color: #ff3a00">clixo</span>
-    <span style="font-size: 50px; font-weight: 300; color: #ff3a00; margin-top: -20px">App</span>
+    <span style="font-size: 80px; font-weight: bolder; color: #fff">clixo</span>
+    <span style="font-size: 50px; font-weight: 300; color: #fff; margin-top: -20px">App</span>
   </body>
 </html>
