--- a/clixoUser.html
+++ b/clixoUser.html
@@ -81,7 +81,7 @@
       />
     </div>
     <div class="user-1">
-      <p style="text-align: center">
+      <p style="text-align: center; justify-content: center">
         Choose Customer, If you are looking <br />
         for a photographer, videographer or Drone pilot
       </p>
